# non-human-arena

./: .gitignore  LICENSE  README.md  run.bat
src/backend/: .env.example  main.py  pyproject.toml
src/backend/api/: __init__.py
src/backend/api/history/: __init__.py
src/backend/api/roles/: __init__.py
src/backend/api/rules/: __init__.py
src/backend/api/sessions/: __init__.py
src/backend/api/templates/: __init__.py
src/backend/api/ws/: __init__.py
src/backend/core/: __init__.py
src/backend/core/container/: __init__.py
src/backend/core/event_bus/: __init__.py
src/backend/core/heartbeat/: __init__.py
src/backend/events/: __init__.py  base.py  handlers.py
src/backend/infrastructure/: __init__.py  config.py  database.py
src/backend/llm/: __init__.py  base.py  manager.py
src/backend/llm/adapters/: __init__.py  openai_adapter.py
src/backend/models/: __init__.py
src/backend/modules/: __init__.py
src/backend/modules/ai/: __init__.py
src/backend/modules/ai/services/: __init__.py  ai_service.py  decision_engine.py
src/backend/modules/history/: __init__.py
src/backend/modules/history/models/: __init__.py  history.py
src/backend/modules/history/schemas/: __init__.py  history.py
src/backend/modules/history/services/: __init__.py  (+1 more)
src/backend/modules/llm/: __init__.py
src/backend/modules/role/: __init__.py
src/backend/modules/rule/: __init__.py
src/backend/modules/session/: __init__.py
src/backend/modules/skill/: __init__.py
src/backend/modules/template/: __init__.py
src/backend/utils/: __init__.py  helpers.py  logging.py
(+142 files in other folders)
